--- a/Origamid/Exercicios/Portfolio/css/global.css
+++ b/Origamid/Exercicios/Portfolio/css/global.css
@@ -1,7 +1,8 @@
 body {
-  font-family: 'Fira Sans', Arial, sans-serif;
+  font-family: "Fira Sans", Arial, sans-serif;
   margin: 0px;
   color: #141414;
+  margin-bottom: 1000px;
 }
 
 h1,
@@ -20,4 +21,20 @@ ul {
 img {
   max-width: 100%;
   display: block;
+}
+
+.subtitulo {
+  font-size: 8rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break: break-all;
+  max-width: 4ch;
+}
+
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial;
+  }
 }
