--- a/Origamid/Exercicios/Portfolio/css/introducao.css
+++ b/Origamid/Exercicios/Portfolio/css/introducao.css
@@ -4,8 +4,8 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
+  gap: 100px;
   align-items: center;
-  gap: 40px;
 }
 
 .introducao h1 {
@@ -20,7 +20,7 @@
   display: block;
   width: 130px;
   height: 100px;
-  background: url(/img/detalhe.svg) no-repeat center;
+  background: url("../img/detalhe.svg") no-repeat center;
   position: absolute;
   top: -15px;
   left: -40px;
@@ -28,11 +28,11 @@
 }
 
 .introducao p {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: #525252;
 }
 
-@media(max-width:1000px) {
+@media (max-width: 1000px) {
   .introducao h1 {
     font-size: 3rem;
   }
@@ -43,24 +43,20 @@
     grid-template-columns: 1fr 1fr;
     gap: 40px;
   }
-
   .introducao h1 {
     font-size: 2rem;
   }
-
   .introducao h1::before {
     width: 30px;
     height: 10px;
     left: 0px;
   }
-
 }
 
-@media (max-width:400px) {
+@media (max-width: 400px) {
   .introducao {
     grid-template-columns: 1fr;
   }
-
   .introducao img {
     display: none;
   }
