--- a/Origamid/Exercicios/Portfolio/css/style.css
+++ b/Origamid/Exercicios/Portfolio/css/style.css
@@ -1,3 +1,4 @@
-@import "/css/global.css";
-@import "/css/header.css";
-@import "/css/introducao.css";
+@import "./global.css";
+@import "./header.css";
+@import "./introducao.css";
+@import "./experiencia.css";
